re-architect build file